k8s/base/10-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: skillpulse
  labels:
    app: mysql
spec:
  selector:
    app: mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: skillpulse
spec:
  serviceName: mysql
  replicas: 1

  selector:
    matchLabels:
      app: mysql

  template:
    metadata:
      labels:
        app: mysql

    spec:
      containers:
        - name: mysql
          image: mysql:8.4
          imagePullPolicy: IfNotPresent

          ports:
            - name: mysql
              containerPort: 3306

          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql

            - name: mysql-init
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 512Mi

          readinessProbe:
            exec:
              command:
                - mysqladmin
                - ping
                - -h
                - localhost
            initialDelaySeconds: 20
            periodSeconds: 10

          livenessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 30
            periodSeconds: 20

      volumes:
        - name: mysql-init
          configMap:
            name: mysql-init

  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 2Gi
