k8s/base/20-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: skillpulse
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: skillpulse
  labels:
    app: backend
spec:
  replicas: 2

  revisionHistoryLimit: 3

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: akashahir/skillpulse-backend:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8080
              name: http

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 256Mi

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 5
