k8s/base/30-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: skillpulse
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: skillpulse
  labels:
    app: frontend
spec:
  replicas: 2

  revisionHistoryLimit: 3

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend
          image: akashahir/skillpulse-frontend:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 80
              name: http

          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 128Mi

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 5
